Index page is working

--- a/contact.html
+++ b/contact.html
@@ -5,4 +5,5 @@ title: Contact
 ---
 ## Contact
 
-Drop me an email if you are interested in me coding for you or saving your neighborhood!
+Ready to start your next project with us? That's great!
+Give us a call or send us an email and we will get back to you as soon as possible!
