--- a/contact.html
+++ b/contact.html
@@ -7,3 +7,9 @@ title: Contact
 
 Ready to start your next project with us? That's great!
 Give us a call or send us an email and we will get back to you as soon as possible!
+You can also come visit us at our office:
+
+Wise Robotics Sarl<br>
+Coworking UniverCité<br>
+Ch. du Closel 5<br>
+1020 Renens
